@@ -3,7 +3,7 @@ import org.gradle.api.tasks.testing.logging.*
 import org.springframework.boot.gradle.tasks.bundling.BootJar
 import org.springframework.boot.gradle.tasks.run.BootRun
 
-val argumentosJvmSemAvisoUnsafe = emptyList<String>()
+val argumentosJvmSemAvisoUnsafe = listOf("--sun-misc-unsafe-memory-access=allow")
 
 plugins {
     java
@@ -15,6 +15,7 @@ plugins {
 
 tasks.withType<JavaCompile>().configureEach {
     options.isFork = true
+    options.forkOptions.jvmArgs?.addAll(argumentosJvmSemAvisoUnsafe)
     options.compilerArgs.addAll(
         listOf(
             "-Xlint:unchecked",
